<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/film"
            android:src="@drawable/img1"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textSize="18sp"
            tools:text="@tools:sample/lorem" />

        <Button
            android:id="@+id/btnInvite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inviteFriend" />

        <CheckBox
            android:id="@+id/chkLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/txtComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment"
            android:textSize="18sp" />


    </LinearLayout>


</ScrollView>
